--- a/pom.xml
+++ b/pom.xml
@@ -5,9 +5,14 @@
     <modelVersion>4.0.0</modelVersion>
     <packaging>pom</packaging>
 
-    <groupId>groupId</groupId>
+    <groupId>ImageStyler</groupId>
     <artifactId>ImageStyler</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <name>ImageStyler</name>
+
+    <modules>
+        <module>desktop-app</module>
+    </modules>
 
     <dependencies>
         <dependency>
