--- a/desktop-app/pom.xml
+++ b/desktop-app/pom.xml
@@ -33,6 +33,12 @@
             <version>2.33</version>
         </dependency>
         -->
+        <dependency>
+            <groupId>org.xerial</groupId>
+            <artifactId>sqlite-jdbc</artifactId>
+            <version>3.15.1
+            </version>
+        </dependency>
     </dependencies>
 
     
