--- a/server/pom.xml
+++ b/server/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>groupId</groupId>
+    <groupId>server</groupId>
     <artifactId>server</artifactId>
     <version>1.0-SNAPSHOT</version>
     <build>
@@ -16,9 +16,9 @@
                     <source>8</source>
                     <target>8</target>
                 </configuration>
-	</plugin>
+	        </plugin>
 
-<plugin>
+            <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>exec-maven-plugin</artifactId>
                 <version>1.6.0</version>
@@ -60,7 +60,14 @@
 		<artifactId>postgresql</artifactId>
 		<version>9.0-801.jdbc4</version>
 	</dependency>
-</dependencies>
+
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>1.7</version>
+        </dependency>
+
+    </dependencies>
 
 
 </project>
